--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ nav button{
 }
 .header{
     background-color: #fff8f3;
+    background-image: url('images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
 }
 .o{
     background-color: #ff6800;
@@ -50,7 +54,7 @@ nav button{
     padding: 15px 35px;
 }
 .bannner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     align-items: center;
    display: flex;
 }
@@ -60,7 +64,41 @@ nav button{
 }
 .banner{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+.banner-content{
 
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background-color: #fff8f3;
+    margin: 130px ;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    
+}
 
 
