--- a/style.css
+++ b/style.css
@@ -100,5 +100,16 @@ nav button{
     font-size: 18px;
     
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-between;
+}
+.about-info{
+    text-align: center;
+}
 
 
