--- a/style.css
+++ b/style.css
@@ -111,5 +111,11 @@ main{
 .about-info{
     text-align: center;
 }
+#what-i-do description{
+    padding:30px 150px;
+}
+.p{
+   background-color: #fff8f3; 
+}
 
 
