--- a/style.css
+++ b/style.css
@@ -111,11 +111,34 @@ main{
 .about-info{
     text-align: center;
 }
+
+
+
 #what-i-do description{
     padding:30px 150px;
 }
 .p{
    background-color: #fff8f3; 
+}
+main section{
+    margin-top: 130px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+    align-items: auto;
+}
+.skill-content{
+    display: flex;
+}
+.resume-column-title{
+    color: #474747;
+    font-family: Open Sans;
+    font-size: 30px;
+    font-weight: 700;
+    font-size: 30px;
 }
 
 
