--- a/style.css
+++ b/style.css
@@ -140,5 +140,27 @@ main section{
     font-weight: 700;
     font-size: 30px;
 }
-
-
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-institute, .resume-item-description{
+    color: #757575;
+    
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+.resume-container hr{
+    margin: 30px;
+}
+#ko{
+    text-align: center;
+    margin-top: 50px;
+}
