--- a/style.css
+++ b/style.css
@@ -171,3 +171,29 @@ footer{
     margin-top: 100px;
     
 }
+.footer-column{
+    width: 50%;
+
+}
+.contact input[type="text"], .contact input{type="email"}
+textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border:0;
+
+}
+.contact input,textarea{
+    display: block;
+    margin: 25px;
+    padding:18px 35px;
+    color: #757575;
+    border: 0;
+} 
+
+.contact input{
+
+}
